	* added entry in popup menu to enter moves not present in Tree
	* In training mode, game is annotated if the user made poor moves (related to values in Mask)
- Book tuning : 
	* any move can be added to a polyglot book at a given position (thanks to Michel Van den Bergh)
	* moves present in the book at ply N+1 but where the previous move is not present at ply N, is displayed in the lower part of the book window : see button "other moves" and its tooltip (thanks to Michel Van den Bergh)
- Plenty of changes in user interface, among others :
	* New entry in "options -> windows" to show / hide game info panel (this can also be triggered in docked mode by using main board tab)
	* New option-> Themes (only small parts of Scid are themable, this will be increased in the future)
	* Removed file combobox.tcl (widget migrated to ttk::combobox)
	* Windows can be docked inside a main window (options menu) : In docked mode, the most important windows are embedded into a main one. The windows can be reordered by right-clicking on the tab (where the title of the window is) and by dragging tabs from one notebook to another. The menu for each window that has one (marked with a triangle at the left of the tab) is opened by left cliking on the tab.
- updated dutch translation (thanks to Michel Van den Bergh)
- updated spanish translation (thanks to Benigno Hernández)
- Fix : Tree window : when a Mask is opened, the whole line is clickable (not only the part with moves and stats)
- Fix : FICS connection. Better handling of connection error if behind a firewall or network is down
- Tree window : when a Tree is updated and the current base is not the Tree's one, the Tree base will automatically load the first game in the filter (so by switching to the Tree's base, the position is already set to the previous one and for example an Opening report can be immediately generated)
- Import clipboard as game : on Unix systems the X selection is pasted only if the clipboard is empty