@@ -666,3 +666,4 @@ scid-3.6.7
 - Fix : FICS connection. Better handling of connection error if behind a firewall or network is down
 - Tree window : when a Tree is updated and the current base is not the Tree's one, the Tree base will automatically load the first game in the filter (so by switching to the Tree's base, the position is already set to the previous one and for example an Opening report can be immediately generated)
 - Import clipboard as game : on Unix systems the X selection is pasted only if the clipboard is empty
+- MacOS : various updates (better support) (thanks to Israel Chauca Fuentes)
